music-master: add origin and approval status to master entities, relations and bindings to allow multiple flows for their creation